@@ -1487,6 +1487,9 @@ a.dropdownselector .handle {
 	margin: -1px 0;
 	padding-top: 5px;
 	min-height: 20px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 select.decorated {
